Fix unit details panel left spacing.

--- a/styles/details.less
+++ b/styles/details.less
@@ -182,7 +182,7 @@
       }
 
       dl {
-        padding-left: 30px;
+        padding-left: 16px;
       }
     }
 
@@ -282,7 +282,7 @@
       #main-info-details {
         margin-top: 4px;
         padding-top: 16px;
-        padding-left: 26px;
+        padding-left: 16px;
         margin-left: 4px;
 
         div {
